My stiles just disappeared for some reason because i changed the config of the postcss and tsconfig I have to fix it , also I made the credits section and now making buttons section to download or share the wrap

--- a/app/globals.css
+++ b/app/globals.css
@@ -73,13 +73,12 @@
 }
 
 @layer base {
-  * {
-    @apply border-border;
-  }
   body {
-    @apply bg-background text-foreground;
+    background-color: hsl(var(--background));
+    color: hsl(var(--foreground));
   }
 }
+
 
 @keyframes fadeInDown {
   from {
